# src/AppForSEII2526.Web/OpenAPIs/swagger.json
@@ -610,12 +610,12 @@
         }
       }
     },
-    "/api/Oferta/GetOferta": {
+    "/api/Oferta/GetDetallesdeOfertasCreadas": {
       "get": {
         "tags": [
           "Oferta"
         ],
-        "operationId": "GetOferta",
+        "operationId": "GetDetallesdeOfertasCreadas",
         "parameters": [
           {
             "name": "id",
@@ -663,6 +663,95 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Oferta/CreacionOferta": {
+      "post": {
+        "tags": [
+          "Oferta"
+        ],
+        "operationId": "CreacionOferta",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreacionOfertaDTO"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreacionOfertaDTO"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreacionOfertaDTO"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/OfertaDetalleDTO"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OfertaDetalleDTO"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OfertaDetalleDTO"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationProblemDetails"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationProblemDetails"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ValidationProblemDetails"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "Conflict",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
@@ -1024,6 +1113,10 @@
         ],
         "type": "object",
         "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
           "apellidoCliente": {
             "minLength": 1,
             "type": "string"
@@ -1093,6 +1186,33 @@
             "minimum": 1,
             "type": "integer",
             "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "CreacionOfertaDTO": {
+        "type": "object",
+        "properties": {
+          "fechaFinal": {
+            "type": "string",
+            "format": "date"
+          },
+          "fechaInicio": {
+            "type": "string",
+            "format": "date"
+          },
+          "tiposMetodoPago": {
+            "$ref": "#/components/schemas/metodoDePago"
+          },
+          "tiposDirigdaOferta": {
+            "$ref": "#/components/schemas/tiposDirigidaOferta"
+          },
+          "ofertaItem": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/OfertaItemDTO"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1229,30 +1349,30 @@
             "type": "integer",
             "format": "int32"
           },
-          "fechafinal": {
-            "type": "string",
-            "format": "date-time"
-          },
           "fechaInicio": {
             "type": "string",
-            "format": "date-time"
+            "format": "date"
           },
-          "dirigidaA": {
-            "$ref": "#/components/schemas/tiposDirigidaOferta"
+          "fechaFinal": {
+            "type": "string",
+            "format": "date"
           },
-          "metododepago": {
+          "fechaOferta": {
+            "type": "string",
+            "format": "date"
+          },
+          "tiposMetodoPago": {
             "$ref": "#/components/schemas/metodoDePago"
           },
-          "ofertaitemdto": {
+          "tiposDirigdaOferta": {
+            "$ref": "#/components/schemas/tiposDirigidaOferta"
+          },
+          "ofertaItem": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/OfertaItemDTO"
             },
             "nullable": true
-          },
-          "fechaOferta": {
-            "type": "string",
-            "format": "date-time"
           }
         },
         "additionalProperties": false
@@ -1260,15 +1380,25 @@
       "OfertaItemDTO": {
         "type": "object",
         "properties": {
+          "porcentaje": {
+            "maximum": 100,
+            "minimum": 0,
+            "type": "number",
+            "format": "currency"
+          },
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
           "nombre": {
             "maxLength": 50,
-            "minLength": 10,
+            "minLength": 0,
             "type": "string",
             "nullable": true
           },
           "material": {
             "maxLength": 50,
-            "minLength": 10,
+            "minLength": 0,
             "type": "string",
             "nullable": true
           },
@@ -1277,16 +1407,15 @@
             "nullable": true
           },
           "precio": {
-            "maximum": 2147483647,
-            "minimum": 0,
+            "minimum": 0.05,
             "type": "number",
-            "format": "float"
+            "format": "currency"
           },
           "precioFinal": {
-            "maximum": 2147483647,
-            "minimum": 0,
+            "minimum": 0.05,
             "type": "number",
-            "format": "float"
+            "format": "currency",
+            "readOnly": true
           }
         },
         "additionalProperties": false
